# aoc_2024

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: day_2.cpp.5AB36422AECC78B8.idx
day_1/: CMakeLists.txt  day_1.cpp
day_1/.cache/clangd/index/: day_1.cpp.4697A477E56B7CE1.idx
day_10/: CMakeLists.txt  main.cpp
day_11/: CMakeLists.txt  main.cpp
day_12/: CMakeLists.txt  main.cpp
day_13/: CMakeLists.txt  main.cpp
day_14/: CMakeLists.txt  main.cpp
day_15/: CMakeLists.txt  main.cpp  test_input.txt
day_19/: CMakeLists.txt  main.cpp
day_2/: CMakeLists.txt  day_2.cpp
day_2/.cache/clangd/index/: day_2.cpp.9C2E568D1D8E945C.idx
day_21/: CMakeLists.txt  main.cpp
day_22/: CMakeLists.txt  main.cpp
day_23/: CMakeLists.txt  main.cpp
day_3/: CMakeLists.txt  main.cpp
day_3/.cache/clangd/index/: main.cpp.30038C71B13210FF.idx  main.cpp.7A543E5B76C1E77A.idx
day_4/: CMakeLists.txt  main.cpp
day_5/: CMakeLists.txt  main.cpp
day_6/: CMakeLists.txt  main.cpp
day_7/: CMakeLists.txt  main.cpp
day_8/: CMakeLists.txt  main.cpp
day_9/: CMakeLists.txt  main.cpp
skeleton/: CMakeLists.txt  main.cpp
