cmake_minimum_required(VERSION 3.20)

project(AOC_2024)

add_subdirectory(day_1)
add_subdirectory(day_2)
add_subdirectory(day_3)
add_subdirectory(day_4)
add_subdirectory(day_5)
add_subdirectory(day_6)
add_subdirectory(day_7)
add_subdirectory(day_8)
add_subdirectory(day_9)
add_subdirectory(day_10)
add_subdirectory(day_11)
add_subdirectory(day_12)
add_subdirectory(day_13)
add_subdirectory(day_14)
add_subdirectory(day_15)
add_subdirectory(day_19)
